--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "test": "jest --coverage",
-    "test:unit": "jest tests/unit --coverage",
-    "test:integration": "jest tests/integration --coverage --detectOpenHandles",
+    "test": "jest --coverage --forceExit",
+    "test:unit": "jest tests/unit --coverage --forceExit",
+    "test:integration": "jest tests/integration --coverage --detectOpenHandles --forceExit",
     "test:watch": "jest --watch",
     "lint": "npx eslint src/",
     "lint:fix": "npx eslint src/ --fix",
