fix: Corregir pipeline CI/CD - agregar forceExit a Jest y corregir ESLint

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,7 @@
 # FASE 5: Pipeline de Integración Continua (CI/CD)
 # Archivo: .github/workflows/ci.yml
 # Descripción: Ejecuta automáticamente pruebas en cada commit
+# Actualizado: 2026-02-03 - Corregido forceExit para Jest
 
 name: CI/CD Pipeline - Pruebas de Software
 
